tests/baselines/reference/parserIndexSignature4.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts(2,3): error TS1161: Computed property names are not allowed in interfaces or type literals.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts (1 errors) ====
    interface I {
      [a = 0]
      ~~~~~~~
!!! error TS1161: Computed property names are not allowed in interfaces or type literals.
    }